# spotmixer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
spotmixer/: __main__.py  app.py  randomizer.py  settings.py
